cgsv/mrs_2.0.0/mrs/include/mrs.hpp

    /**
     * @fn mrs_close
     * @brief 接続を閉じます
     * @param connection 操作対象の接続
     * この関数を呼んだ時点では、実際の接続終了の通信は行われず、次のmrs_update 関数の呼び出し時に実行されます。

     */    
MRS_API void MRS_API_CC mrs_close( MrsConnection connection );
    /**
     * @fn mrs_set_cipher
     * @brief  接続に対してMrsCipherを登録します。
     * @param connection 登録対象となる接続
     * @param cipher 登録したいMrsCipher
     */
MRS_API void MRS_API_CC mrs_set_cipher( MrsConnection connection, MrsCipher cipher );
    /**
     * @fn mrs_key_exchange
     * @brief 鍵交換を開始するよう指示します
     * @param connection 鍵交換を開始する接続
     * @param callback  鍵交換が完了したときに呼び出されるコールバック関数
     * 鍵交換は、クライアントまたはサーバから、本関数を呼んだ時に「鍵交換リクエスト」を互いに送信し、
     * それに対して「鍵交換レスポンス」を互いに返すという動作をします。
     *  この関数を呼ぶと、鍵交換リクエストを送信します。　送信に成功したらtrue、失敗したらfalseを返します。
     */
MRS_API bool MRS_API_CC mrs_key_exchange( MrsConnection connection, MrsKeyExchangeCallback callback );
    /**
     * @head2 ログ出力をするための関数
     * MRSはライブラリ内部の動作ログを、 mrs_log_output関数を使って出力します。
     * この関数をアプリケーションでも使うことができます。MRSのログ出力は、
     * ログを出力するたびにコールバック関数を呼ぶことで実現されます。
     * デフォルトの状態で mrs_console_log関数が設定されていますが、
     * それを mrs_set_log_callback関数を用いてアプリケーションの独自のものに置き換えることができます。
     *
     * ログ出力レベルはプロセス全体でひとつで、設定した値以上(値自体を含む)のレベルのログが出力されます。
     * 出力レベルは、 EMERGが最高でDEBUGが最低です。詳細は MrsLogLevel 列挙体の定義を参照してください。
     */
    /**
     * @fn mrs_get_output_log_level
     * @brief 現在設定されているログ出力レベルの値を取得します
     * @return 現在のログ出力レベル
     */
MRS_API MrsLogLevel MRS_API_CC mrs_get_output_log_level();
    /**
     * @fn mrs_set_output_log_level
     * @brief MRSライブラリのログ出力レベルを設定します
     * @param level 設定するログ出力レベル
     */
MRS_API void MRS_API_CC mrs_set_output_log_level( MrsLogLevel level );
    /**
     * @fn mrs_is_output_log_level
     * @brief MRSライブラリのログ出力可能なレベルか判定します
     * @param level 判定するログ出力レベル
     * @return ログ出力可能なら、trueを返します
     */
MRS_API bool MRS_API_CC mrs_is_output_log_level( MrsLogLevel level );
    /**
     * @fn mrs_output_log
     * @brief ログレベルを指定してログを出力します
     * @param level 出力したいログのレベル
     * @param msg メッセージ
     */
MRS_API void MRS_API_CC mrs_output_log( MrsLogLevel level, const char* msg );
    /**
     * @fn mrs_get_log_callback
     * @brief ログを出力するために設定されているコールバック関数を取得します
     * @return 現在設定されているコールバック関数
     */    
MRS_API MrsLogOutputCallback MRS_API_CC mrs_get_log_callback();
    /**
     * @fn mrs_set_log_callback
     * @brief ログを出力するためのコールバック関数を設定します
     * @param callback コールバック関数
     */
MRS_API void MRS_API_CC mrs_set_log_callback( MrsLogOutputCallback callback );
    /**
     * @fn mrs_console_log
     * @brief MRSのログを標準出力に出力する関数
     * @param level mrs_output_log関数に指定されたログ出力レベルがそのまま渡されます
     * @param msg mrs_output_log関数に指定されたログメッセージがそのまま渡されます
     * mrs_console_log関数は、MRSライブラリのデフォルトのログ出力コールバック関数としてあらかじめ設定されています。
     * この関数は、 mrs_set_log_callback関数を使って置き換えることができます。     
     */
MRS_API void MRS_API_CC mrs_console_log( MrsLogLevel level, const char* msg );
    /**
     * @head2 エラーコードを扱うための関数
     * MRSライブラリ内部のエラー状態は、ライブラリでひとつの変数に格納されています。
     * mrs_get_last_error関数でその値を取得し、 mrs_get_error_string関数で文字列に変換できます。
     */
    /**
     * @fn mrs_get_last_error
     * @brief MRSの関数内部で起きたエラーの種類を返します
     * @return エラーコード。値の詳細は MrsErrorを参照してください
     */
MRS_API MrsError MRS_API_CC mrs_get_last_error();
    /**
     * @fn mrs_get_error_string
     * @brief エラー番号を文字列に変換します
     * @param error エラーコード。通常は mrs_get_last_errorの値を入力します
     * @return エラーを説明する文字列
     */    
MRS_API const char* MRS_API_CC mrs_get_error_string( MrsError error );
    /**
     * @fn mrs_get_connection_error_string
     * @brief 接続に関するエラー番号を文字列に変換します
     * @param error エラーコード。通常は MrsErrorCallbackのstatus値を入力します
     * @return エラーを説明する文字列
     */    
MRS_API const char* MRS_API_CC mrs_get_connection_error_string( MrsConnectionError error );
    /**
     * @head2 その他の便利な関数
     */
    /**
     * @fn mrs_sleep
     * @brief 指定した時間だけスレッドの実行を停止する
     * @param sleep_msec 現在のスレッドを停止するミリ秒数
     */
MRS_API void MRS_API_CC mrs_sleep( uint32 sleep_msec );
    /**
     * @fn mrs_set_ssl_certificate_data
     * @brief SSL証明書データの設定
     * @param data SSL証明書データ
     */
MRS_API void MRS_API_CC mrs_set_ssl_certificate_data( const char* data );
    /**
     * @fn mrs_set_ssl_private_key_data
     * @brief SSL秘密鍵データの設定
     * @param data SSL秘密鍵データ
     */
MRS_API void MRS_API_CC mrs_set_ssl_private_key_data( const char* data );
    /**
     * @fn mrs_set_keep_alive_update_msec
     * @brief キープアライブ更新時間の設定
     * @param update_msec キープアライブを更新するミリ秒数
     */
MRS_API void MRS_API_CC mrs_set_keep_alive_update_msec( uint32 update_msec );
    /**
     * @fn mrs_get_keep_alive_update_msec
     * @brief キープアライブ更新時間の取得
     * @return キープアライブを更新するミリ秒数
     */
MRS_API uint32 MRS_API_CC mrs_get_keep_alive_update_msec();
    /**
     * @fn mrs_set_version
     * @brief バージョンの設定
     * @param key 設定対象バージョンのキー
     * @param value 設定対象バージョンの値
     */
MRS_API void MRS_API_CC mrs_set_version( const char* key, uint32 value );
    /**
     * @fn mrs_get_version
     * @brief バージョンの取得
     * @param key 取得対象バージョンのキー
     * @return バージョン
     */
MRS_API uint32 MRS_API_CC mrs_get_version( const char* key );
    /**
     * @fn mrs_connection_get_remote_version
     * @brief 接続先のバージョンの取得
     * @param connection 取得対象の接続
     * @param key 取得対象バージョンのキー
     * @return 接続先のバージョン
     */
MRS_API uint32 MRS_API_CC mrs_connection_get_remote_version( MrsConnection connection, const char* key );
    /**
     * @fn mrs_udp_set_mtu
     * @brief UDPプロトコルのMTUの設定
     * @param value MTUの値
     */
MRS_API void MRS_API_CC mrs_udp_set_mtu( uint32 value );
    /**
     * @fn mrs_udp_get_mtu
     * @brief UDPプロトコルのMTUの取得
     * @return MTUの値
     */
MRS_API uint32 MRS_API_CC mrs_udp_get_mtu();
    /**
     * @fn mrs_mru_set_client_peer_limit
     * @brief MRUプロトコルのクライアント接続の上限値の設定
     * @param value 上限値
     */
MRS_API void MRS_API_CC mrs_mru_set_client_peer_limit( uint32 value );
    /**
     * @fn mrs_mru_get_client_peer_limit
     * @brief MRUプロトコルのクライアント接続の上限値の取得
     * @return 上限値
     */
MRS_API uint32 MRS_API_CC mrs_mru_get_client_peer_limit();
    /**
     * @fn mrs_mru_set_sendq_size
     * @brief MRUプロトコルの送信キューサイズの設定
     * @param value 送信キューサイズ
     */
MRS_API void MRS_API_CC mrs_mru_set_sendq_size( uint32 value );
    /**
     * @fn mrs_mru_get_sendq_size
     * @brief MRUプロトコルの送信キューサイズの取得
     * @return 送信キューサイズ
     */
MRS_API uint32 MRS_API_CC mrs_mru_get_sendq_size();