cgsv/mrs_2.0.0/mrs/sample/unity/sample/Assets/Monobit/Plugins/iOS/Monobit/mrs/include/mrs/common.hpp

/**
 * @head2 関数の引数に使う各種の列挙体
 */

/**
 * @enum MrsLogLevel
 * @brief ログ出力レベルの種類を定義します
 * syslogが用いている、RFC 5424での定義に準拠しています。
 */
enum MrsLogLevel {
    MRS_LOG_LEVEL_EMERG   = 0, // @member システムが使用不可
    MRS_LOG_LEVEL_ALERT   = 1, // @member 直ちに行動を起こさなければならない
    MRS_LOG_LEVEL_CRIT    = 2, // @member 危険な状態
    MRS_LOG_LEVEL_ERR     = 3, // @member エラー
    MRS_LOG_LEVEL_WARNING = 4, // @member 警告
    MRS_LOG_LEVEL_NOTICE  = 5, // @member 通常だが重要な状態
    MRS_LOG_LEVEL_INFO    = 6, // @member 参考にすべきメッセージ
    MRS_LOG_LEVEL_DEBUG   = 7, // @member デバッグレベルのメッセージ
};
/**
 * @enum MrsError
 * @brief MRS APIのエラーコードを定義します
 */
enum MrsError {
    MRS_NO_ERROR        = 0,  // @member エラーなし
    
    MRS_ENOENT          = 2,  // @member ファイルやディレクトリが存在しない
    MRS_ENOMEM          = 12, // @member メモリが不足している
    MRS_EACCES          = 13, // @member アクセス権限が不足している(1024以下のポート番号など)
    MRS_EMFILE          = 24, // @member これ以上ファイル(ソケット)を開けない(ulimitの設定が必要です)
    MRS_EADDRINUSE      = 48, // @member ポート番号がすでに使われている
    MRS_EADDRNOTAVAIL   = 49, // @member クライアント側で必要なポート番号を使い切っている
    MRS_ENETUNREACH     = 51, // @member 到達できないネットワークである
    MRS_ETIMEDOUT       = 60, // @member 操作はタイムアウトした
    MRS_EHOSTUNREACH    = 65, // @member 到達できないホストである
    
    MRS_ECONNECTIONTYPE = 0xF001, // @member 不正な接続の種別コード (MrsConnectionの値が不正)
    MRS_EBACKLOG        = 0xF002, // @member mrs_server_create 関数のbacklogの値が不正(大きすぎる)
    MRS_ECONNECTIONNUM  = 0xF003, // @member mrs_get_connection_num_hard_limit 関数の値より多いクライアントを生成した
};
/**
 * @enum MrsConnectionError
 * @brief MrsConnectionに設定したエラーコールバック関数に渡されるエラー種別コードを定義します
 */
enum MrsConnectionError {
    MRS_CONNECT_ERROR                   = 1,  // @member MrsConnectionにおいてTCPのconnect()に失敗した(サーバがポートを開いていないなど)
    MRS_CONNECT_TIMEOUT                 = 2,  // @member MrsConnectionにおいてTCPのconnect()の時間切れ(サーバマシン自体が起動していないか、アドレスを間違えているなど)
    MRS_WRITE_ERROR                     = 3,  // @member 接続に対して書き込みができなかった
    MRS_KEY_EXCHANGE_REQUEST_ERROR      = 4,  // @member 鍵交換の開始要求を送信できなかった
    MRS_KEY_EXCHANGE_RESPONSE_ERROR     = 5,  // @member 鍵交換の返信を送信できなかった
    MRS_PEER_CONNECTION_HARD_LIMIT_OVER = 6,  // @member 接続相手がコネクション上限に達している
    MRS_CONNECTION_READBUF_SIZE_OVER    = 7,  // @member 読み込みバッファを越えたデータを受信した
    MRS_KEEPALIVE_TIMEOUT               = 8,  // @member 一定時間無通信状態によるタイムアウトを検出した
    MRS_PROTOCOL_ERROR                  = 9,  // @member 接続相手のプロトコルが不正
    MRS_READ_INVALID_RECORD_ERROR       = 10, // @member 読み込んだレコードが不正
    MRS_LISTEN_ERROR                    = 11, // @member ソケットの待ち受け処理に失敗した(既に同じポートが使われているなど)
    MRS_RESOLVE_ADDRESS_ERROR           = 12, // @member アドレス解決処理に失敗した
    MRS_RESOLVE_ADDRESS_TIMEOUT         = 13, // @member アドレス解決処理の時間切れ
    MRS_WRITE_ERROR_MRU_OVER_MTU        = 14, // @member MTU以上に長いデータを送ろうとした(MRUのみ)
    MRS_WRITE_ERROR_MRU_SENDQ_FULL      = 15, // @member 送信キューがあふれている(MRUのみ)
};
typedef void* MrsConnection;
typedef void* MrsCipher;
/**
 * @head2 関数の引数に与えるコールバック関数
 */

/**
 * @cbfn MrsLogOutputCallback
 * @brief ログが1回出力されるごとに呼び出されるコールバック関数
 * @param level mrs_output_log 関数の呼び出し時に指定されたログ出力レベルの値
 * @param msg 出力されたログメッセージ
 */
typedef void (MRS_API_CC *MrsLogOutputCallback)( MrsLogLevel level, const char* msg );
/**
 * @cbfn MrsKeyExchangeCallback
 * @brief 鍵交換が完了したときに呼ばれるコールバック関数
 * @param connection 鍵交換が完了した接続
 * @param connection_data ...
 */
typedef void (MRS_API_CC *MrsKeyExchangeCallback)( MrsConnection connection, void* connection_data );