cgsv/mrs_2.0.0/mrs/sample/unity/sample/Assets/Monobit/Plugins/Monobit/mrs/Mrs.cs

    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern void mrs_set_cipher( MrsConnection connection, MrsCipher cipher );
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern bool mrs_key_exchange( MrsConnection connection, MrsKeyExchangeCallback callback );
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern void mrs_close( MrsConnection connection );
    
    /**
     * ログ系メソッドをマーシャリングすると、
     * 原因不明のクラッシュが発生するので、
     * DLLを使用しない
     **/
    protected static MrsLogLevel          s_LogOutputLevel;
    protected static MrsLogOutputCallback s_LogOutputCallback;
    
    public static MrsLogLevel mrs_get_output_log_level(){
        return s_LogOutputLevel;
    }
    
    public static void mrs_set_output_log_level( MrsLogLevel level ){
        s_LogOutputLevel = level;
    }
    
    public static bool mrs_is_output_log_level( MrsLogLevel level ){
        return ( level <= s_LogOutputLevel );
    }
    
    public static void mrs_output_log( MrsLogLevel level, String msg ){
        if ( mrs_is_output_log_level( level ) ) s_LogOutputCallback( level, msg );
    }
    
    public static MrsLogOutputCallback mrs_get_log_callback(){
        return s_LogOutputCallback;
    }
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern void mrs_set_log_callback( IntPtr callback );
    public static void mrs_set_log_callback( MrsLogOutputCallback callback ){
        s_LogOutputCallback = callback;
        mrs_set_log_callback( Marshal.GetFunctionPointerForDelegate( s_LogOutputCallback ) );
    }
    
#if UNITY
    [AOT.MonoPInvokeCallback(typeof(MrsLogOutputCallback))]
#endif
    public static void mrs_console_log( MrsLogLevel level, String msg ){
        switch ( level ){
        case MrsLogLevel.DEBUG:
        case MrsLogLevel.INFO:
        case MrsLogLevel.NOTICE:{
            #if UNITY
            UnityEngine.Debug.Log( msg );
            #else
            Console.WriteLine( msg );
            #endif
        }break;
        
        case MrsLogLevel.WARNING:{
            #if UNITY
            UnityEngine.Debug.LogWarning( msg );
            #else
            Console.WriteLine( msg );
            #endif
        }break;
        
        default:{
            #if UNITY
            UnityEngine.Debug.LogError( msg );
            #else
            Console.WriteLine( msg );
            #endif
        }break;
        }
    }
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern MrsError mrs_get_last_error();
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    /**
     * 戻り値の型をIntPtrではなくStringにしたかったが、
     * Unityが強制終了してしまうので、
     * 戻り値をIntPtrからStringに変換するようにした
     **/
    public static extern IntPtr mrs_get_error_string( MrsError error );
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern IntPtr mrs_get_connection_error_string( MrsConnectionError error );
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern void mrs_sleep( UInt32 sleep_msec );
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern void mrs_set_ssl_certificate_data( String data );
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern void mrs_set_ssl_private_key_data( String data );
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern void mrs_set_keep_alive_update_msec( UInt32 update_msec );
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern UInt32 mrs_get_keep_alive_update_msec();
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern void mrs_set_version( String key, UInt32 value );
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern UInt32 mrs_get_version( String key );
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern UInt32 mrs_connection_get_remote_version( MrsConnection connection, String key );
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern void mrs_udp_set_mtu( UInt32 value );
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern UInt32 mrs_udp_get_mtu();
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern void mrs_mru_set_client_peer_limit( UInt32 value );
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern UInt32 mrs_mru_get_client_peer_limit();
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern void mrs_mru_set_sendq_size( UInt32 value );
    
    [DllImport(DllName, CallingConvention=CallingConvention.Cdecl)]
    public static extern UInt32 mrs_mru_get_sendq_size();
    
// [unity]
    public static String ToString( byte[] value ){
        return System.Text.Encoding.UTF8.GetString( value ).TrimEnd( '\0' );
    }
    
    public static String ToString( IntPtr value ){
        return Marshal.PtrToStringAnsi( value );
    }
    
    public static byte[] ToBytes( String value ){
        return System.Text.Encoding.UTF8.GetBytes( value );
    }
    
    public static byte[] ToBytes( IntPtr value, UInt32 value_len ){
        byte[] result = new byte[ value_len ];
        if ( 0 < value_len ) Marshal.Copy( value, result, 0, (Int32)value_len );
        return result;
    }
    
    public static byte ToUInt8( String value ){
        byte result = 0;
        byte.TryParse( value, out result );
        return result;
    }
    
    public static UInt16 ToUInt16( String value ){
        UInt16 result = 0;
        UInt16.TryParse( value, out result );
        return result;
    }
    
    public static UInt32 ToUInt32( String value ){
        UInt32 result = 0;
        UInt32.TryParse( value, out result );
        return result;
    }
    
    public static UInt64 ToUInt64( String value ){
        UInt64 result = 0;
        UInt64.TryParse( value, out result );
        return result;
    }
    
    public static sbyte ToInt8( String value ){
        sbyte result = 0;
        sbyte.TryParse( value, out result );
        return result;
    }
    
    public static Int16 ToInt16( String value ){
        Int16 result = 0;
        Int16.TryParse( value, out result );
        return result;
    }
    
    public static Int32 ToInt32( String value ){
        Int32 result = 0;
        Int32.TryParse( value, out result );
        return result;
    }
    
    public static Int64 ToInt64( String value ){
        Int64 result = 0;
        Int64.TryParse( value, out result );
        return result;
    }
    
    #if ! UNITY_EDITOR && ( UNITY_WEBGL )
    [DllImport("__Internal")]
    public static extern void __mrs_setup__();
    #else
    public static void __mrs_setup__(){}
    #endif
    
    static Mrs(){
        s_LogOutputLevel = MrsLogLevel.DEBUG;
        mrs_set_log_callback( mrs_console_log );
        
        __mrs_setup__();
    }
    
#if UNITY_ANDROID
    private void __Android__(){
        // android.permission.INTERNET
        // android.permission.ACCESS_NETWORK_STATE
        UnityEngine.Debug.Log( "Application.internetReachability="+ UnityEngine.Application.internetReachability );
    }
#endif
}
